# combatsim

./: .gitignore  Makefile  Pipfile  README.md  creature.py  dice.py  encounter.py  pyproject.toml
combatsim/: ability.py  attacks.py  cantrips.py  creature.py  dice.py  encounter.py  event.py  events.py  grid.py  items.py  monster_manual.py  rules.py  rules_error.py  sample_creatures.py  spells.py  tactics.py  weapon.py
tests/: __init__.py  conftest.py  mock_dice.py  test_attack.py  test_cantrips.py  test_creature.py  test_dice.py  test_encounter.py  test_items.py  test_mock_dice.py  test_spells.py
tests/functional/: test_cantrips.py
tests/unit/: test_ability.py  test_creature.py  test_dice.py  test_encounter.py  test_event.py  test_grid.py  test_items.py  test_mock_dice.py  test_spells.py
