[tool.poetry]
name = "combatsim"
version = "0.1.0"
description = "Combat simulator for D&D 5e"
authors = ["Phillip Lemons <philliplemons512@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pytest = "^5.3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
